--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
 <body>
  <div class="wrapper">
   <div class="header"></div>
-  <div class="top_menu"></div>
-  <div class="sideLeft"></div>
+  <div class="top_menu">
+   <div class="knopka">
+    <div class="lan"></div>
+    <div class="lan"></div>
+    <div class="lan"></div>
+   </div>
+  </div>
+  <div class="sideLeft">
+   <div class="bar"></div>
+   <div class="bar"></div>
+   <div class="bar"></div>
+  </div>
   <div class="content"></div>
   <div class="clear"></div>
   <div class="footer"></div>
